--- a/data/02_silver/clean_data.ipynb
+++ b/data/02_silver/clean_data.ipynb
@@ -5,42 +5,469 @@
    "execution_count": null,
    "id": "4cbc85f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.3\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
-      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'urban_traffic_ai_model/requirements.txt'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058cef74",
+   "id": "53706fed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>rain_1h</th>\n",
+       "      <th>snow_1h</th>\n",
+       "      <th>clouds_all</th>\n",
+       "      <th>weather_main</th>\n",
+       "      <th>weather_description</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>traffic_volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>288.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>2012-10-02 09:00:00</td>\n",
+       "      <td>5545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>289.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>2012-10-02 10:00:00</td>\n",
+       "      <td>4516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>289.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2012-10-02 11:00:00</td>\n",
+       "      <td>4767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>290.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2012-10-02 12:00:00</td>\n",
+       "      <td>5026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>291.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>2012-10-02 13:00:00</td>\n",
+       "      <td>4918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48199</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>283.45</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>2018-09-30 19:00:00</td>\n",
+       "      <td>3543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48200</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2018-09-30 20:00:00</td>\n",
+       "      <td>2781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48201</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.73</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Thunderstorm</td>\n",
+       "      <td>proximity thunderstorm</td>\n",
+       "      <td>2018-09-30 21:00:00</td>\n",
+       "      <td>2159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48202</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2018-09-30 22:00:00</td>\n",
+       "      <td>1450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48203</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2018-09-30 23:00:00</td>\n",
+       "      <td>954</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48204 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      holiday    temp  rain_1h  snow_1h  clouds_all  weather_main  \\\n",
+       "0         NaN  288.28      0.0      0.0          40        Clouds   \n",
+       "1         NaN  289.36      0.0      0.0          75        Clouds   \n",
+       "2         NaN  289.58      0.0      0.0          90        Clouds   \n",
+       "3         NaN  290.13      0.0      0.0          90        Clouds   \n",
+       "4         NaN  291.14      0.0      0.0          75        Clouds   \n",
+       "...       ...     ...      ...      ...         ...           ...   \n",
+       "48199     NaN  283.45      0.0      0.0          75        Clouds   \n",
+       "48200     NaN  282.76      0.0      0.0          90        Clouds   \n",
+       "48201     NaN  282.73      0.0      0.0          90  Thunderstorm   \n",
+       "48202     NaN  282.09      0.0      0.0          90        Clouds   \n",
+       "48203     NaN  282.12      0.0      0.0          90        Clouds   \n",
+       "\n",
+       "          weather_description            date_time  traffic_volume  \n",
+       "0            scattered clouds  2012-10-02 09:00:00            5545  \n",
+       "1               broken clouds  2012-10-02 10:00:00            4516  \n",
+       "2             overcast clouds  2012-10-02 11:00:00            4767  \n",
+       "3             overcast clouds  2012-10-02 12:00:00            5026  \n",
+       "4               broken clouds  2012-10-02 13:00:00            4918  \n",
+       "...                       ...                  ...             ...  \n",
+       "48199           broken clouds  2018-09-30 19:00:00            3543  \n",
+       "48200         overcast clouds  2018-09-30 20:00:00            2781  \n",
+       "48201  proximity thunderstorm  2018-09-30 21:00:00            2159  \n",
+       "48202         overcast clouds  2018-09-30 22:00:00            1450  \n",
+       "48203         overcast clouds  2018-09-30 23:00:00             954  \n",
+       "\n",
+       "[48204 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['holiday', 'temp', 'rain_1h', 'snow_1h', 'clouds_all', 'weather_main',\n",
+      "       'weather_description', 'date_time', 'traffic_volume'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = \"teste\" #ou real\n",
+    "\n",
+    "df_limpeza = pd.read_csv(\"..\\\\01_bronze\\\\Metro_Interstate_Traffic_Volume.csv\")\n",
+    "\n",
+    "display(df_limpeza)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9ba96a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>rain_1h</th>\n",
+       "      <th>snow_1h</th>\n",
+       "      <th>clouds_all</th>\n",
+       "      <th>weather_main</th>\n",
+       "      <th>weather_description</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>traffic_volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>288.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>2012-10-02 09:00:00</td>\n",
+       "      <td>5545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>289.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>2012-10-02 10:00:00</td>\n",
+       "      <td>4516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>289.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2012-10-02 11:00:00</td>\n",
+       "      <td>4767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>290.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2012-10-02 12:00:00</td>\n",
+       "      <td>5026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>291.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>2012-10-02 13:00:00</td>\n",
+       "      <td>4918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11127</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>248.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>2013-12-31 19:00:00</td>\n",
+       "      <td>4504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>247.66</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>2013-12-31 20:00:00</td>\n",
+       "      <td>3478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11129</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>248.63</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>sky is clear</td>\n",
+       "      <td>2013-12-31 21:00:00</td>\n",
+       "      <td>2711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11130</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>248.39</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>2013-12-31 22:00:00</td>\n",
+       "      <td>2189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11131</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>249.89</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "      <td>1457</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11132 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      holiday    temp  rain_1h  snow_1h  clouds_all weather_main  \\\n",
+       "0         NaN  288.28      0.0      0.0          40       Clouds   \n",
+       "1         NaN  289.36      0.0      0.0          75       Clouds   \n",
+       "2         NaN  289.58      0.0      0.0          90       Clouds   \n",
+       "3         NaN  290.13      0.0      0.0          90       Clouds   \n",
+       "4         NaN  291.14      0.0      0.0          75       Clouds   \n",
+       "...       ...     ...      ...      ...         ...          ...   \n",
+       "11127     NaN  248.13      0.0      0.0           1        Clear   \n",
+       "11128     NaN  247.66      0.0      0.0           1        Clear   \n",
+       "11129     NaN  248.63      0.0      0.0           1        Clear   \n",
+       "11130     NaN  248.39      0.0      0.0          40       Clouds   \n",
+       "11131     NaN  249.89      0.0      0.0          90       Clouds   \n",
+       "\n",
+       "      weather_description           date_time  traffic_volume  \n",
+       "0        scattered clouds 2012-10-02 09:00:00            5545  \n",
+       "1           broken clouds 2012-10-02 10:00:00            4516  \n",
+       "2         overcast clouds 2012-10-02 11:00:00            4767  \n",
+       "3         overcast clouds 2012-10-02 12:00:00            5026  \n",
+       "4           broken clouds 2012-10-02 13:00:00            4918  \n",
+       "...                   ...                 ...             ...  \n",
+       "11127        sky is clear 2013-12-31 19:00:00            4504  \n",
+       "11128        sky is clear 2013-12-31 20:00:00            3478  \n",
+       "11129        sky is clear 2013-12-31 21:00:00            2711  \n",
+       "11130    scattered clouds 2013-12-31 22:00:00            2189  \n",
+       "11131     overcast clouds 2013-12-31 23:00:00            1457  \n",
+       "\n",
+       "[11132 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_limpeza['date_time'] = pd.to_datetime(df_limpeza['date_time'])\n",
+    "df_limpo = df_limpeza[(df_limpeza['date_time'] >= '2012-01-01') & (df_limpeza['date_time'] < '2014-01-01')]\n",
+    "\n",
+    "display(df_limpo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b081eaf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_limpeza.to_csv(f\"./dataset-{dataset}/dataset-{dataset}-limpo.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
