Feat(Prata)- FuncionalTesteReal

--- a/data/02_silver/clean_data.ipynb
+++ b/data/02_silver/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4cbc85f2",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "53706fed",
    "metadata": {},
    "outputs": [
@@ -218,15 +218,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['holiday', 'temp', 'rain_1h', 'snow_1h', 'clouds_all', 'weather_main',\n",
-      "       'weather_description', 'date_time', 'traffic_volume'],\n",
-      "      dtype='object')\n"
-     ]
     }
    ],
    "source": [
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "9ba96a8a",
    "metadata": {},
    "outputs": [
@@ -448,26 +439,33 @@
     }
    ],
    "source": [
-    "df_limpeza['date_time'] = pd.to_datetime(df_limpeza['date_time'])\n",
-    "df_limpo = df_limpeza[(df_limpeza['date_time'] >= '2012-01-01') & (df_limpeza['date_time'] < '2014-01-01')]\n",
+    "if(dataset == \"teste\"):\n",
+    "    df_limpeza['date_time'] = pd.to_datetime(df_limpeza['date_time'])\n",
+    "    df_limpo = df_limpeza[(df_limpeza['date_time'] >= '2012-01-01') & (df_limpeza['date_time'] < '2014-01-01')]\n",
+    "\n",
+    "elif(dataset == \"real\"):\n",
+    "    df_limpeza['date_time'] = pd.to_datetime(df_limpeza['date_time'])\n",
+    "    df_limpo = df_limpeza[(df_limpeza['date_time'] >= '2016-01-01') & (df_limpeza['date_time'] < '20171-01-01')]\n",
     "\n",
     "display(df_limpo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2b081eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_limpeza.to_csv(f\"./dataset-{dataset}/dataset-{dataset}-limpo.csv\", index=False)"
+    "import os \n",
+    "os.makedirs('./dataset-{dataset}', exist_ok=True)\n",
+    "#df_limpeza.to_csv(f\"./dataset-{dataset}/dataset-{dataset}-limpo.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.5)",
    "language": "python",
    "name": "python3"
   },
